refactor: add data wget

--- a/demographic_data_analysis.ipynb
+++ b/demographic_data_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQWl5YzAwDteQ9neHZx8K/",
+      "authorship_tag": "ABX9TyNbnd58AvR7hM8WDGXF2V4z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,39 @@
       "source": [
         "import pandas as pd\n",
         "import unittest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget 'https://raw.githubusercontent.com/LeonSilva15/fcc-data-analysis/main/data/adult.data.csv'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iDfY7OUJHyhu",
+        "outputId": "6f89e384-65cd-4641-fd18-8a266dda8f66"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-10-14 21:39:50--  https://raw.githubusercontent.com/LeonSilva15/fcc-data-analysis/main/data/adult.data.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3518607 (3.4M) [text/plain]\n",
+            "Saving to: ‘adult.data.csv.1’\n",
+            "\n",
+            "\radult.data.csv.1      0%[                    ]       0  --.-KB/s               \radult.data.csv.1    100%[===================>]   3.36M  --.-KB/s    in 0.02s   \n",
+            "\n",
+            "2023-10-14 21:39:50 (220 MB/s) - ‘adult.data.csv.1’ saved [3518607/3518607]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
