feat: add libraries

--- a/page_view_time_series_visualizer.ipynb
+++ b/page_view_time_series_visualizer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3ifVl78LYN+bxTSB8ZaiI",
+      "authorship_tag": "ABX9TyMcg9mF/9AYsCsCaLRP9VIR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "OXBm9cdM3Rzi"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import matplotlib as mpl\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import unittest\n",
+        "from pandas.plotting import register_matplotlib_converters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uw744ews3th5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
